# Better-Safe-Than-Sorry

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
better_safe_than_sorry/: README.md  __init__.py
better_safe_than_sorry/analysis/: README.md  main.py
better_safe_than_sorry/generation_of_test_profiles/: README.md  main.py  random_test_generator.py
better_safe_than_sorry/shared/: __init__.py
better_safe_than_sorry/simulation/: README.md  analyze.py  breaking_rules_randomizer.py  simulate.py
better_safe_than_sorry/utils/: custom_export.py  custom_logging.py
better_safe_than_sorry/vagrant_deployment/: README.md  main.py
rsc/breaking_rules/: 10_1.json  10_1_r1.json  10_1_r2.json  10_1_r3.json  11_1.json  11_1_r1.json  11_1_r2.json  11_1_r3.json  12_1.json  12_1_r1.json  12_1_r2.json  12_1_r3.json  13_1.json  13_1_r1.json  13_1_r2.json  13_1_r3.json  14_1.json  14_1_r1.json  14_1_r2.json  14_1_r3.json  15_1.json  15_1_r1.json  15_1_r2.json  15_1_r3.json  1_1.json  1_10.json  1_10_r1.json  1_10_r2.json  1_10_r3.json  1_11.json  1_11_r1.json  1_11_r2.json  1_11_r3.json  1_12.json  1_12_r1.json  1_12_r2.json  1_12_r3.json  1_13.json  1_13_r1.json  1_13_r2.json  (+161 more)
rsc/sfera_automation_jsons/: ipog-d_2-way.json  ipog-d_3-way.json  ipog-d_4-way.json  ipog_2-way.json  ipog_3-way.json  ipog_4-way.json  sfera_automation.json
rsc/vagrant/: Vagrantfile  setup.ps1
rsc/vagrant/cis_windows_10_1909/: blacklist.json  name_to_sid.json
rsc/vagrant/tests/: test.ps1  test_account_creation.ps1  test_configuration.json
